# ai-workflow-builder-case-study

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  PRIVACY.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: coding-task.yml
.github/workflows/: ci.yml  pr-contract.yml  task-state.yml
docs/: AGENT_PILOT.md
docs/workflow-explorer/: README.md  build.py  index.html  model.py  render.py  template.html
docs/workflow-explorer/data/: build_trace.json
evals/: README.md  gates.json  pipeline_cases.json  rubric_cases.json
examples/: synthetic_demo_report.md  synthetic_ops_notes.json
src/ai_workflow_builder/: __init__.py  cli.py  evaluation.py  pipeline.py  providers.py  report.py  review.py  schemas.py  validators.py
tests/: test_agent_workflow_contract.py  test_cli_analyze.py  test_demo_report.py  test_eval_cli.py  test_evaluation.py  test_examples_are_synthetic.py  test_fake_llm.py  test_providers.py  test_review_gate.py  test_schemas.py  test_smoke.py  test_validators.py  test_workflow_explorer.py
