[project]
name = "ai-workflow-builder"
version = "0.1.0"
description = "Clean-room case study of an offline internal AI workflow tool."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.8",
    "typer>=0.12",
]

[project.scripts]
awb = "ai_workflow_builder.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_workflow_builder"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
